# RAPP_DataPipeline

./: .gitignore  LICENSE  README.md
CropOps/src/: CMakeLists.txt  main.cpp
convert2ceres/src/: CMakeLists.txt  ConsoleApp.cpp  FileProcessor.cpp  FileProcessor.hpp  GuiApp.cpp  LidarData2CeresConverter.cpp  LidarData2CeresConverter.hpp  MainFrame.cpp  MainWindow.cpp  MainWindow.hpp  ldBlockDataFile.cpp  ldBlockDataFile.hpp  ldBlockDataFileExceptions.hpp  ldBlockId.hpp  ldBlockParser.cpp  ldBlockParser.hpp  ldClassIdentifiers.hpp  ldCrc.cpp  ldCrc.hpp  ldOusterBlockId.cpp  ldOusterBlockId.hpp  ldOusterDataIdentifiers.hpp  ldOusterParser.cpp  ldOusterParser.hpp  main.cpp
daily_checker/src/: CMakeLists.txt  CeresDailyChecker.cpp  CeresDailyChecker.hpp  ConsoleApp.cpp  GuiApp.cpp  MainFrame.cpp  MainWindow.cpp  MainWindow.hpp  ResultsDlg.cpp  ResultsDlg.hpp  version.cpp.in
data_repair/: .gitignore  CMakeLists.txt  README.md
data_repair/src/: AxisCommunicationsRepairParser.cpp  AxisCommunicationsRepairParser.hpp  AxisCommunicationsVerificationParser.cpp  BlockDataFileRecovery.cpp  BlockDataFileRecovery.hpp  BlockDataFileRepair.cpp  BlockDataFileRepair.hpp  CMakeLists.txt  CeresDataRepair.cpp  ConsoleApp.cpp  DataFileRecovery.cpp  DataFileRecovery.hpp  DataRepair.cpp  DataRepair.hpp  DataRepairProcessor.cpp  DataRepairProcessor.hpp  ExperimentInfoFromJson.cpp  ExperimentInfoFromJson.hpp  ExperimentInfoRepairParser.cpp  ExperimentInfoRepairParser.hpp  FileProcessor.cpp  FileProcessor.hpp  GuiApp.cpp  MainFrame.cpp  MainWindow.cpp  MainWindow.hpp  OusterRepairParser.cpp  OusterRepairParser.hpp  version.cpp.in
data_verification/: .gitignore  CMakeLists.txt  README.md
data_verification/src/: AxisCommunicationsVerificationParser.cpp  AxisCommunicationsVerificationParser.hpp  CMakeLists.txt  CentralWidget.hpp  CeresDataVerification.cpp  CeresDataVerification.qrc  CeresDataVerifier.cpp  CeresDataVerifier.hpp  ConsoleApp.cpp  DataVerification.cpp  DataVerifier.cpp  DataVerifier.hpp  ExperimentInfoFromJson.cpp  ExperimentInfoFromJson.hpp  GuiApp.cpp  HySpexSWIR_384_VerificationParser.cpp  HySpexSWIR_384_VerificationParser.hpp  HySpexVNIR_3000N_VerificationParser.cpp  HySpexVNIR_3000N_VerificationParser.hpp  LidarDataVerifier.cpp  LidarDataVerifier.hpp  LucidTritonVerificationParser.cpp  LucidTritonVerificationParser.hpp  MainFrame.cpp  MainWindow.cpp  MainWindow.hpp  OusterTypes.hpp  OusterVerificationParser.cpp  OusterVerificationParser.hpp  SsnxVerificationParser.cpp  SsnxVerificationParser.hpp  TeledyneAtlasFlirVerificationParser.cpp  TeledyneAtlasFlirVerificationParser.hpp  version.hpp
feature_extraction/src/: CMakeLists.txt  CommonFunctions.cpp  CommonFunctions.h  ExtractFeatures.cpp  ExtractFeatures.hpp  FileProcessor.hpp  LineDetection3D.cpp  LineDetection3D.h  main.cpp  nanoflann.hpp  utils.h
file_repair/src/: BlockDataFileRecovery.cpp  BlockDataFileRecovery.hpp  CMakeLists.txt  ConsoleApp.cpp  DataFileRecovery.cpp  DataFileRecovery.hpp  FileProcessor.cpp  FileProcessor.hpp  FileRepairProcessor.cpp  FileRepairProcessor.hpp  GuiApp.cpp  MainFrame.cpp  MainFrame.hpp  MainWindow.cpp  MainWindow.hpp
file_verification/src/: AbstractFileVerifier.hpp  CMakeLists.txt  CeresFileVerifier.cpp  CeresFileVerifier.hpp  ConsoleApp.cpp  GuiApp.cpp  LidarFileVerifier.cpp  LidarFileVerifier.hpp  MainFrame.cpp  MainWindow.cpp  MainWindow.hpp  Service_Windows.cpp
hyperspectra2bil/src/: CMakeLists.txt  ConsoleApp.cpp  FileProcessor.cpp  FileProcessor.hpp  GuiApp.cpp  HySpexSWIR384_2_PNG.cpp  HySpexSWIR384_2_PNG.hpp  HySpexSWIR384_BIL.cpp  HySpexSWIR384_BIL.hpp  HySpexSWIR384_BIL_ArcMap.cpp  HySpexSWIR384_BIL_ArcMap.hpp  HySpexSWIR384_BIL_ENVI.cpp  HySpexSWIR384_BIL_ENVI.hpp  HySpexSWIR384_BIP.cpp  HySpexSWIR384_BIP.hpp  HySpexSWIR384_BIP_ArcMap.cpp  HySpexSWIR384_BIP_ArcMap.hpp  HySpexSWIR384_BIP_ENVI.cpp  HySpexSWIR384_BIP_ENVI.hpp  HySpexSWIR384_BSQ.cpp  HySpexSWIR384_BSQ.hpp  HySpexSWIR384_BSQ_ArcMap.cpp  HySpexSWIR384_BSQ_ArcMap.hpp  HySpexSWIR384_BSQ_ENVI.cpp  HySpexSWIR384_BSQ_ENVI.hpp  HySpexSWIR384_File.cpp  HySpexSWIR384_File.hpp  HySpexVNIR3000N_2_PNG.hpp  HySpexVNIR3000N_BIL.cpp  HySpexVNIR3000N_BIL.hpp  HySpexVNIR3000N_BIL_ArcMap.cpp  HySpexVNIR3000N_BIL_ArcMap.hpp  HySpexVNIR3000N_BIL_ENVI.cpp  HySpexVNIR3000N_BIL_ENVI.hpp  HySpexVNIR3000N_BIP.cpp  HySpexVNIR3000N_BIP.hpp  HySpexVNIR3000N_BIP_ArcMap.cpp  HySpexVNIR3000N_BIP_ArcMap.hpp  HySpexVNIR3000N_BIP_ENVI.cpp  HySpexVNIR3000N_BIP_ENVI.hpp  (+11 more)
hyperspectra2png/src/: BIL_2_PNG.cpp  BIL_2_PNG.hpp  CMakeLists.txt  ConsoleApp.cpp  FileProcessor.cpp  FileProcessor.hpp  FileProcessor_BIL.cpp  FileProcessor_BIL.hpp  FileProcessor_Ceres.cpp  FileProcessor_Ceres.hpp  HySpexSWIR384_2_PNG.cpp  HySpexSWIR384_2_PNG.hpp  HySpexVNIR3000N_2_PNG.cpp  HySpexVNIR3000N_2_PNG.hpp  MainFrame.cpp  MainWindow.cpp  MainWindow.hpp
lidar2pointcloud/src/: BS_thread_pool.hpp  CMakeLists.txt  ConfigFileData.cpp  ConfigFileData.hpp  ConsoleApp.cpp  ExportUtils.cpp  ExportUtils.hpp  FieldScanDataModel.cpp  FieldScanDataModel.hpp  FieldScanLoader.cpp  FieldScanLoader.hpp  FieldUtils.cpp  FieldUtils.hpp  FileProcessor.cpp  FileProcessor.hpp  GpsFileReader.cpp  GroundDataModel.cpp  GroundDataModel.hpp  GroundModelUtils.cpp  GroundModelUtils.hpp  GuiApp.cpp  KinematicUtils.cpp  KinematicUtils.hpp  Kinematics.cpp  Kinematics.hpp  Kinematics_Constant.cpp  Kinematics_Constant.hpp  Kinematics_Constant_SensorRotation.cpp  Kinematics_Constant_SensorRotation.hpp  Kinematics_Dolly.cpp  Kinematics_Dolly.hpp  Kinematics_GPS.cpp  Kinematics_GPS.hpp  Kinematics_SLAM.cpp  Kinematics_SLAM.hpp  LidarMapConfigDefaults.cpp  LidarMapConfigDefaults.hpp  LidarMapConfigFile.cpp  LidarMapConfigFile.hpp  LidarMapConfigOptions.cpp  (+29 more)
lidarstatistics/src/: CMakeLists.txt  FileProcessor.cpp  FileProcessor.hpp  LidarStatistics.cpp  LidarStatistics.hpp  main.cpp
plot_data/src/: CMakeLists.txt  ConsoleApp.cpp  FileProcessor.cpp  FileProcessor.hpp  GuiApp.cpp  MainFrame.cpp  MainFrame.hpp  MainWindow.cpp  MainWindow.hpp  OctNode.cpp  (+29 more)
plot_split/: CMakeLists.txt  LICENSE  README.md
(+415 files in other folders)
